# CreateHotCue

./: .gitignore  ENHANCED_PHASE2_README.md  LICENSE  Makefile  PHASE1_README.md  PHASE1_STRENGTHENING_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_README.md  PHASE3_README.md  README.md  development_plan.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_cuepoint_components.py
.github/workflows/: macos.yml
config/: config.json
scripts/: setup_dev.sh  test_phase1.py  validate_audio_playback.py  validate_enhanced_phase2.py  validate_phase1_enhanced.py  validate_phase2.py  validate_phase3.py
src/: __init__.py  main.py
src/analysis/: __init__.py  structure_analyzer.py
src/core/: __init__.py  advanced_performance_monitor.py  audio_loader.py  beatgrid_engine.py  cue_manager.py  metadata_parser.py  performance_monitor.py  serato_bridge.py
src/gui/: __init__.py  main_window.py  navigation_controls.py  sidebar.py  transport_bar.py  waveform_view.py
src/playback/: __init__.py  audio_engine.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  fps_test.py
tests/integration/: test_phase1_enhanced.py
tests/unit/: test_audio_loader.py  test_beatgrid_engine.py  test_cue_manager.py  test_enhanced_cue_manager.py  test_enhanced_metadata_parser.py  test_main_window.py  test_metadata_parser.py  test_structure_analyzer.py
